Fixed overflow

--- a/layouts/style.css
+++ b/layouts/style.css
@@ -14,6 +14,7 @@ a {
 body {
    margin: 0;
    font-family: sans-serif;
+   overflow-x: hidden;
 }
 * {
    box-sizing: border-box;
